# function-auto-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: functions.yaml  observed.yaml
function/: fn.py  main.py  sdk.py
function/proto/v1beta1/: run_function_pb2.py  run_function_pb2_grpc.py
package/: crossplane.yaml
tests/: test_fn.py
